--- a/html/pfappserver/root/auditing/radiuslog/index.tt
+++ b/html/pfappserver/root/auditing/radiuslog/index.tt
@@ -1,4 +1,5 @@
     <div class="sidenav sidenav-section offset1 span3"
+         style="display: none"
          data-category="radius">
       [% INCLUDE admin/auditing_radius_log.tt %]
     </div><!--/.sidenav-section-->
