--- a/html/pfappserver/root/dhcpoption82/index.tt
+++ b/html/pfappserver/root/dhcpoption82/index.tt
@@ -1,5 +1,6 @@
   <div class="sidenav sidenav-section offset1 span3"
-      data-category="dhcp82">
+       style="display: none"
+       data-category="dhcp82">
     [% INCLUDE admin/auditing_option82.tt %]
   </div><!--/.sidenav-section-->
 
