--- a/html/pfappserver/root/config/networks/index.tt
+++ b/html/pfappserver/root/config/networks/index.tt
@@ -5,7 +5,7 @@
 <div id="tabView">
   <ul class="nav nav-tabs">
     <li [% IF tab == 'network general' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'networking') %]" data-toggle="tab">[% l('Network Settings') %]</a>
+      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'network') %]" data-toggle="tab">[% l('Network Settings') %]</a>
     </li>
     <li [% IF tab == 'interfaces' %]class="active"[% END %]>
       <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'interfaces') %]" data-toggle="tab">[% l('Interfaces') %]</a>
