readd wrix link

--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -138,6 +138,9 @@ table.sources {
               [% pf_section_entry( 'metadefender', 'OPSWAT Metadefender') | none %]
               [% pf_section_entry( 'webservices', 'Web Services') | none %]
               [%- END %]
+              [%- IF can_access("WRIX_READ") %]
+              [% list_entry('Config::Wrix', 'index', 'WRIX') | none %]
+              [%- END %]
             </ul>
           </div>
           <div class="sidenav sidenav-section sidenav-inverse span3 offset1"
