--- a/html/pfappserver/root/config/adminroles/index.tt
+++ b/html/pfappserver/root/config/adminroles/index.tt
@@ -15,9 +15,12 @@
         </div>
       </div>
 
+<div class="card">
+  <div class="card-title">
       <h2>[% l('Admin Roles') %]</h2>
 
       <p>[% l('Define roles with specific access rights to the Web administration interface. Roles are assigned to users depending on their authentication source.') %]</p>
+      </div>
 
       [% INCLUDE config/adminroles/list.tt %]
 
@@ -30,3 +33,4 @@
         <a class="btn createItem" href="[% c.uri_for(c.controller.action_for('create')) %]">[% l('Add admin role') %]</a>
       </div>
       [%- END %]
+</div>
