--- a/html/pfappserver/root/config/database/index.tt
+++ b/html/pfappserver/root/config/database/index.tt
@@ -1,5 +1,6 @@
 <h4 class="alert alert-warning">[% l('This section is for the database. Make sure you know what you are doing before modifying setting, especially in the advanced section.') %]</h4>
 
+<div class="card">
 <div id="tabView">
   <ul class="nav nav-tabs">
     <li [% IF tab == 'database' %]class="active"[% END %]>
@@ -9,8 +10,10 @@
       <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'database_advanced') %]" data-toggle="tab">[% l('Database Advanced') %]</a>
     </li>
   </ul>
+</div>
 <div class="tab-content">
   <div class="tab-pane fade" id="newTabView">
   </div><!--tab-pane-->
+</div>
 </div>
 </div>
