--- a/html/pfappserver/root/config/wrix/index.tt
+++ b/html/pfappserver/root/config/wrix/index.tt
@@ -16,7 +16,10 @@
         </div>
       </div>
 
+<div class="card">
+  <div class="card-block">
       <h2>[% l('WRIX') %]</h2>
+  </div>
       <div class="well">
         [% INCLUDE config/wrix/search_form.tt %]
       </div>
@@ -25,3 +28,5 @@
         <a class="btn createItem" href="[% c.uri_for(c.controller.action_for('create')) %]">[% l('Add Wrix Entry') %]</a>
         <a class="btn pull-right" href="[%c.uri_for(c.controller.action_for('export'))%]">[% l('Export All') %]</a>
       </div>
+  </div>
+</div>
