--- a/html/pfappserver/root/configuration/main.tt
+++ b/html/pfappserver/root/configuration/main.tt
@@ -1,29 +1,15 @@
 <p class="p3 p-info">[% l('This section is for the general system configuration. Anything related to the services or PacketFence general configuration will be find here.') %]</p>
-
 <div class="card">
   <div class="card-block">
-<div id="tabView">
-  <ul class="nav nav-tabs">
-    <li [% IF tab == 'general' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'general') %]" data-toggle="tab">[% l('General Configuration') %]</a>
-    </li>
-    <li [% IF tab == 'alerting' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'alerting') %]" data-toggle="tab">[% l('Alerting') %]</a>
-    </li>
-    <li [% IF tab == 'advanced' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'advanced') %]" data-toggle="tab">[% l('Advanced') %]</a>
-    </li>
-    <li [% IF tab == 'Maintenance' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Config::Pfmon').action_for('index')) %]" data-toggle="tab">[% l('Maintenance') %]</a>
-    </li>
-    <li [% IF tab == 'Services' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'services') %]" data-toggle="tab">[% l('Services') %]</a>
-    </li>
-  </ul>
-<div class="tab-content">
-  <div class="tab-pane fade" id="newTabView">
-  </div><!--tab-pane-->
-</div>
-</div>
+    <ul class="nav nav-tabs">
+      [% FOREACH available_tab IN tabs.keys %]
+      <li [% IF tab == available_tab %]class="active"[% END %]>
+        <a href="#configuration/main/[% available_tab %]">[% l(tabs.$available_tab.name) %]</a>
+      </li>
+      [% END %]
+    </ul>
+    <div class="tab-content">
+      [% inner_content | none %]
+    </div>
   </div>
 </div>
