--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -206,7 +206,7 @@ table.sources {
               [%- IF can_access("PFMON_READ") %]
               [% pf_section_entry( 'main', 'Main Configuration') | none %]
               [%- END %]
-              [% pf_section_entry( 'pfdb', 'Database') | none %]
+              [% pf_section_entry( 'database', 'Database') | none %]
               [% pf_section_entry( 'active_active', 'Cluster') | none %]
               [% pf_section_entry( 'radius_authentication_methods', 'Authentication Methods') | none %]
               [%- END %]
