--- a/html/pfappserver/root/configuration/database.tt
+++ b/html/pfappserver/root/configuration/database.tt
@@ -1,20 +1,15 @@
-<h4 class="alert alert-warning">[% l('This section is for the database. Make sure you know what you are doing before modifying setting, especially in the advanced section.') %]</h4>
-
+<p class="p3 p-info">[% l('This section is for the database. Make sure you know what you are doing before modifying setting, especially in the advanced section.') %]</p>
 <div class="card">
-<div class="card-block">
-<div id="tabView">
-  <ul class="nav nav-tabs">
-    <li [% IF tab == 'database' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'database') %]" data-toggle="tab">[% l('Database General') %]</a>
-    </li>
-    <li [% IF tab == 'database_advanced' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'database_advanced') %]" data-toggle="tab">[% l('Database Advanced') %]</a>
-    </li>
-  </ul>
-<div class="tab-content">
-  <div class="tab-pane fade" id="newTabView">
-  </div><!--tab-pane-->
-</div>
-</div>
-</div>
+  <div class="card-block">
+    <ul class="nav nav-tabs">
+      [% FOREACH available_tab IN tabs.keys %]
+      <li [% IF tab == available_tab %]class="active"[% END %]>
+        <a href="#configuration/database/[% available_tab %]">[% l(tabs.$available_tab.name) %]</a>
+      </li>
+      [% END %]
+    </ul>
+    <div class="tab-content">
+      [% inner_content | none %]
+    </div>
+  </div>
 </div>
