--- a/html/pfappserver/root/configuration/networks.tt
+++ b/html/pfappserver/root/configuration/networks.tt
@@ -2,28 +2,15 @@
 
 <div class="card">
   <div class="card-block">
-<div id="tabView">
-  <ul class="nav nav-tabs">
-    <li [% IF tab == 'network general' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'network') %]" data-toggle="tab">[% l('Network Settings') %]</a>
-    </li>
-    <li [% IF tab == 'interfaces' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'interfaces') %]" data-toggle="tab">[% l('Interfaces') %]</a>
-    </li>
-    <li [% IF tab == 'inline' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'inline') %]" data-toggle="tab">[% l('Inline') %]</a>
-    </li>
-    <li [% IF tab == 'fencing' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'fencing') %]" data-toggle="tab">[% l('Fencing') %]</a>
-    </li>
-    <li [% IF tab == 'parking' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Configuration').action_for('section'), 'parking') %]" data-toggle="tab">[% l('Device Parking') %]</a>
-    </li>
-  </ul>
-<div class="tab-content">
-  <div class="tab-pane fade" id="newTabView">
-  </div><!--tab-pane-->
-</div>
-</div>
+    <ul class="nav nav-tabs">
+      [% FOREACH available_tab IN tabs.keys %]
+      <li [% IF tab == available_tab %]class="active"[% END %]>
+        <a href="#configuration/networks/[% available_tab %]">[% l(tabs.$available_tab.name) %]</a>
+      </li>
+      [% END %]
+    </ul>
+    <div class="tab-content">
+      [% inner_content | none %]
+    </div>
   </div>
 </div>
