--- a/html/pfappserver/root/configuration/scans.tt
+++ b/html/pfappserver/root/configuration/scans.tt
@@ -1,20 +1,15 @@
 <p class="p3 p-info">[% l('This section is for scanners. you will be able to configure scan engine and rules here.') %]</p>
-
 <div class="card">
   <div class="card-block">
-<div id="tabView">
-  <ul class="nav nav-tabs">
-    <li [% IF tab == 'scan engines' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Config::Scan').action_for('index')) %]" data-toggle="tab">[% l('Scan Engines') %]</a>
-    </li>
-    <li [% IF tab == 'wmi rules' %]class="active"[% END %]>
-      <a href="#newTabView" data-href="[% c.uri_for(c.controller('Config::WMI').action_for('index')) %]" data-toggle="tab">[% l('WMI Rules') %]</a>
-    </li>
-  </ul>
-<div class="tab-content">
-  <div class="tab-pane fade" id="newTabView">
-  </div><!--tab-pane-->
-</div>
-</div>
-</div>
+    <ul class="nav nav-tabs">
+      [% FOREACH available_tab IN tabs.keys %]
+      <li [% IF tab == available_tab %]class="active"[% END %]>
+        <a href="#configuration/scans/[% available_tab %]">[% l(tabs.$available_tab.name) %]</a>
+      </li>
+      [% END %]
+    </ul>
+    <div class="tab-content">
+      [% inner_content | none %]
+    </div>
+  </div>
 </div>
