--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -45,9 +45,14 @@ table.sources {
               </li>
 [% END -%]
 
-[% MACRO pf_section_entry(section, description) BLOCK %]
-              <li>
+[% MACRO pf_section_entry(section, description, subsections) BLOCK %]
+              <li class="section">
                 <a href="[%c.pf_hash_for(c.controller('Configuration').action_for('section'),section) %]">[% l(description || section) %]</a>
+                <ul>
+                [% FOREACH subsection IN subsections.keys %]
+                <li class="subsection"><a href="[%c.pf_hash_for(c.controller('Configuration').action_for(section),subsection) %]">[% subsections.$subsection.name %]</a></li>
+                [% END %]
+                </ul>
               </li>
 [% END -%]
 
@@ -87,7 +92,7 @@ table.sources {
               [% list_entry( 'Config::Roles', 'index', 'Roles') | none %]
               [%- END %]
               [%- IF can_access("DOMAIN_READ","REALM_READ") %]
-              [% pf_section_entry( 'domains', 'Domains') | none %]
+              [% pf_section_entry( 'domains', 'Domains', subsections.domains) | none %]
               [%- END %]
               [%- IF can_access("USERS_SOURCES_READ") %]
               [% list_entry( 'Config::Authentication', 'index', 'Sources') | none %]
@@ -108,13 +113,13 @@ table.sources {
             </ul>
             <ul class="nav nav-list">
               [%- IF can_access("FINGERBANK_READ") %]
-              [% pf_section_entry( 'profiling', 'Fingerbank Profiling') | none %]
+              [% pf_section_entry( 'profiling', 'Fingerbank Profiling', subsections.profiling) | none %]
               [%- END %]
               [%- IF can_access("VIOLATIONS_READ") %]
               [% list_entry('Violation', 'index', 'Violations') | none %]
               [%- END %]
               [%- IF can_access("SCAN_READ","WMI_READ","CONFIGURATION_MAIN_READ") %]
-              [% pf_section_entry( 'scans', 'Scans') | none %]
+              [% pf_section_entry( 'scans', 'Scans', subsections.scans) | none %]
               [%- END %]
               [%- IF can_access("PFDETECT_READ") %]
               [% list_entry('Config::Pfdetect', 'index', 'Syslog Parsers') | none %]
@@ -183,7 +188,7 @@ table.sources {
             </ul>
             <ul class="nav nav-list">
               [%- IF can_access("INTERFACES_READ") %]
-              [% pf_section_entry( 'networks', 'Networks') | none %]
+              [% pf_section_entry( 'networks', 'Networks', subsections.networks) | none %]
               [%- END %]
               [%- IF can_access("CONFIGURATION_MAIN_READ") %]
               [% pf_section_entry( 'omapi', 'OMAPI') | none %]
@@ -204,9 +209,9 @@ table.sources {
             <ul class="nav nav-list">
               [%- IF can_access("CONFIGURATION_MAIN_READ") %]
               [%- IF can_access("PFMON_READ") %]
-              [% pf_section_entry( 'main', 'Main Configuration') | none %]
+              [% pf_section_entry( 'main', 'Main Configuration', subsections.main) | none %]
               [%- END %]
-              [% pf_section_entry( 'database', 'Database') | none %]
+              [% pf_section_entry( 'database', 'Database', subsections.database) | none %]
               [% pf_section_entry( 'active_active', 'Cluster') | none %]
               [% pf_section_entry( 'radius_authentication_methods', 'Authentication Methods') | none %]
               [%- END %]
