--- a/html/pfappserver/root/configuration/domains.tt
+++ b/html/pfappserver/root/configuration/domains.tt
@@ -1,7 +1,7 @@
 <p class="p3 p-info">[% l('This section is for Domains and REALMS. Manage to which domains your PacketFence server is joined.') %]</p>
 <div class="card">
   <div class="card-title">
-    <h2>[% l('Domains') %]</h2>
+    <h2>[% l('Domains') %] [% doc('_roles_management') | none %]</h2>
   </div>
   <div class="card-block">
     <ul class="nav nav-tabs">
