--- a/html/pfappserver/root/config/floatingdevice/index.tt
+++ b/html/pfappserver/root/config/floatingdevice/index.tt
@@ -17,7 +17,7 @@
 
       <div class="card">
         <div class="card-title">
-          <h2>[% l('Floating Devices') %]</h2>
+          <h2>[% l('Floating Devices') %] [% doc('_floating_network_devices') | none %]</h2>
         </div>
 
         <div class="card-block">
