--- a/html/pfappserver/root/config/portal_module/index.tt
+++ b/html/pfappserver/root/config/portal_module/index.tt
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-title">
-    <h2>[% l('Portal modules') %]</h2>
+    <h2>[% l('Portal modules') %] [% doc('_portal_modules') | none %]</h2>
   </div>
   <div class="card-block">
 
