--- a/html/pfappserver/root/config/profile/index.tt
+++ b/html/pfappserver/root/config/profile/index.tt
@@ -15,7 +15,7 @@
 
 <div class="card">
   <div class="card-title">
-    <h2>[% l('Connection Profiles and Pages')  %]</h2>
+    <h2>[% l('Connection Profiles and Pages') %] [% doc('_connection_profiles) | none %]</h2>
   </div>
   <div class="card-block">
 [% IF error %]<div class="alert alert-error">
