--- a/html/pfappserver/root/config/provisioning/index.tt
+++ b/html/pfappserver/root/config/provisioning/index.tt
@@ -17,7 +17,7 @@
 
       <div class="card">
         <div class="card-title">
-      <h2>[% l('Provisioning') %]</h2>
+      <h2>[% l('Provisioning') %] [% doc('_apple_and_android_wireless_provisioning') | none %]</h2>
         </div>
 
         <div class="card-block">
