--- a/html/pfappserver/root/config/realm/index.tt
+++ b/html/pfappserver/root/config/realm/index.tt
@@ -15,7 +15,7 @@
         </div>
       </div>
 
-      <!-- <h2>[% l('Realm')  %]</h2> -->
+      <h2>[% l('Realms') %] [% doc('_default_domain_configuration') | none %]</h2>
       <div class="alert alert-warning">
         <strong>[% l('Warning!') %]</strong> [% l('Adding or removing a realm requires to restart the radiusd service to be effective.') %]
       </div>
