move sidenav for option 82 audinting

--- a/html/pfappserver/root/dhcpoption82/index.tt
+++ b/html/pfappserver/root/dhcpoption82/index.tt
@@ -1,3 +1,8 @@
+  <div class="sidenav sidenav-section offset1 span3"
+      data-category="dhcp82">
+    [% INCLUDE admin/auditing_option82.tt %]
+  </div><!--/.sidenav-section-->
+
   <div class="modal modal-large fade hide" id="modalItem">
   </div>
 
