--- a/html/pfappserver/root/config/fingerbank/settings/onboard.tt
+++ b/html/pfappserver/root/config/fingerbank/settings/onboard.tt
@@ -1,15 +1,18 @@
-<h2>[% l('Fingerbank Onboarding') %]</h2>
+<div class="card">
+  <h2 class="card-title">[% l('Fingerbank Onboarding') %]</h2>
 
-<p>[% l('Proceed here:') %] <a href="https://fingerbank.inverse.ca/users/register" target="_blank">https://fingerbank.inverse.ca/users/register</a></p>
+  <form id="fingerbankonboard" class="form-horizontal" action="[%c.uri_for(c.controller.action_for('onboard'))%]" method="post">
+    <div class="card-block">
+      <p>[% l('Proceed here:') %] <a href="https://fingerbank.inverse.ca/users/register" target="_blank">https://fingerbank.inverse.ca/users/register</a></p>
 
-<p>[% l('Once done, you will be issued an API key that you need to enter in the following field, then complete the process by clicking "Get Aboard!"') %]</p>
+      <p>[% l('Once done, you will be issued an API key that you need to enter in the following field, then complete the process by clicking "Get Aboard!"') %]</p>
 
-<form id="fingerbankonboard" class="form-horizontal" action="[%c.uri_for(c.controller.action_for('onboard'))%]" method="post">
-  [% FOREACH field IN form.fields %]
-    [% form.field(field.name).render | none %]
-  [% END %]
-
-  <div class="form-actions">
-    <button type="submit" class="btn btn-primary">Get Aboard!</button>
-  </div>
-</form>
+      [% FOREACH field IN form.fields %]
+      [% form.field(field.name).render | none %]
+      [% END %]
+    </div>
+    <div class="form-actions card-actions">
+      <button type="submit" class="btn btn-primary">[% l('Get Aboard!') %]</button>
+    </div>
+  </form>
+</div>
