--- a/html/pfappserver/root/configuration/section.tt
+++ b/html/pfappserver/root/configuration/section.tt
@@ -16,7 +16,7 @@
 [% END %]
     </div>
     [%- IF can_access("CONFIGURATION_MAIN_UPDATE") %]
-    <div class="form-actions">
+    <div class="card-actions form-actions">
       <button type="submit" class="btn btn-primary">[% l('Save') %]</button>
       <button type="reset" class="btn">[% l('Reset') %]</button>
     </div>
