--- a/html/pfappserver/root/interface/index.tt
+++ b/html/pfappserver/root/interface/index.tt
@@ -8,7 +8,7 @@
   </div>
 
 [%- IF can_access("INTERFACES_CREATE") %]
-<div class="form-actions">
+<div class="card-actions form-actions">
   <a id="createNetwork" class="btn" href="[% c.uri_for(c.controller('Config::Networks').action_for('create')) %]">[% l('Add routed network') %]</a>
 </div>
 [%- END %]
