--- a/html/pfappserver/root/auditing/radiuslog/index.tt
+++ b/html/pfappserver/root/auditing/radiuslog/index.tt
@@ -1,10 +1,12 @@
-    <div class="sidenav sidenav-section offset1 span3"
-         style="display: none"
-         data-category="radius">
-      [% INCLUDE admin/auditing_radius_log.tt %]
-    </div><!--/.sidenav-section-->
-  <div class="modal modal-large fade hide" id="modalRadiusAuditLog">
-  </div>
+<div class="sidenav sidenav-section offset1 span3"
+     style="display: none"
+     data-category="radius">
+  [% INCLUDE admin/auditing_radius_log.tt %]
+</div><!--/.sidenav-section-->
+
+[% INCLUDE admin/saved_search.inc savedSearchController="SavedSearch::RadiusLog" method="POST" %]
+
+<div class="modal modal-large fade hide" id="modalRadiusAuditLog"></div>
 
 [%- BLOCK search_options %]
   <select name="searches.0.name"[% ' disabled="disabled"' IF disabled %] class="span4">
