--- a/html/pfappserver/root/admin/auditing_option82.tt
+++ b/html/pfappserver/root/admin/auditing_option82.tt
@@ -5,14 +5,14 @@
             <ul class="nav nav-list">
               <li class="divider"></li>
               <li id="accordion-SwithGroup">
-                <a data-toggle="collapse" data-parent="#accordion-SwithGroup" href="#collapseSwitchGroup" class="collapsed">
+                <a data-toggle="collapse" href="#collapseOption82SwitchGroup" class="collapsed">
                     [% l('Switch Groups')%]
                 <i class="icon-chevron-up pull-right"></i></a>
-                <ul id="collapseSwitchGroup" class="collapse">
-                  <a data-toggle="collapse" data-parent="#collapseSwitchGroup" href="#collapseSwitchGroupDefault" class="collapsed">Default<i class="icon-chevron-up pull-right"></i></a>
-                    <li id="collapseSwitchGroupDefault" class="collapse">
+                <ul id="collapseOption82SwitchGroup" class="collapse">
+                  <a data-toggle="collapse" data-parent="#collapseOption82SwitchGroup" href="#collapseOption82SwitchGroupDefault" class="collapsed">Default<i class="icon-chevron-up pull-right"></i></a>
+                    <li id="collapseOption82SwitchGroupDefault" class="collapse">
                       <ul>[% FOREACH switch IN switches %]
-                      <li><a href="#" data-toggle="pf-search-form" data-parent="#collapseSwitchGroupDefault" data-target="#search" data-form-target="#search">[% switch.id %]</a>
+                      <li><a href="#" data-toggle="pf-search-form" data-parent="#collapseOption82SwitchGroupDefault" data-target="#search" data-form-target="#search">[% switch.id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="switch_id"/>
                           <input type="hidden" name="searches.0.op" value="equal"/>
@@ -22,7 +22,7 @@
                       [% END %]</ul>
                     </li>
                   [% FOREACH switch_group IN switch_groups %]
-                    <a data-toggle="collapse" data-parent="#collapseSwitchGroup" href="#collapse_[% switch_group.id %]" class="collapsed">[% switch_group.id %]<i class="icon-chevron-up pull-right"></i></a>
+                    <a data-toggle="collapse" data-parent="#collapseOption82SwitchGroup" href="#collapse_[% switch_group.id %]" class="collapsed">[% switch_group.id %]<i class="icon-chevron-up pull-right"></i></a>
                     <li id="collapse_[% switch_group.id %]" class="collapse">
                       <ul>[% FOREACH member IN switch_group.members %]
                         <li><a href="#" data-toggle="pf-search-form" data-parent="#collapse_[% switch_group.id %]"data-target="#search" data-form-target="#search">[% member.id %]</a>
