--- a/html/pfappserver/root/admin/auditing_radius_log.tt
+++ b/html/pfappserver/root/admin/auditing_radius_log.tt
@@ -5,14 +5,14 @@
             <ul class="nav nav-list">
               <li class="divider"></li>
               <li id="accordion-SwithGroup">
-                <a data-toggle="collapse" data-parent="#accordion-SwithGroup" href="#collapseSwitchGroup" class="collapsed">
+                <a data-toggle="collapse" href="#collapseRadiusSwitchGroup" class="collapsed">
                     [% l('Switch Groups')%]
                 <i class="icon-chevron-up pull-right"></i></a>
-                <ul id="collapseSwitchGroup" class="collapse">
-                  <a data-toggle="collapse" data-parent="#collapseSwitchGroup" href="#collapseSwitchGroupDefault" class="collapsed">Default<i class="icon-chevron-up pull-right"></i></a>
-                    <li id="collapseSwitchGroupDefault" class="collapse">
+                <ul id="collapseRadiusSwitchGroup" class="collapse">
+                  <a data-toggle="collapse" href="#collapseRadiusSwitchGroupDefault" class="collapsed">Default<i class="icon-chevron-up pull-right"></i></a>
+                    <li id="collapseRadiusSwitchGroupDefault" class="collapse">
                       <ul>[% FOREACH switch IN switches %]
-                      <li><a href="#" data-toggle="pf-search-form" data-parent="#collapseSwitchGroupDefault"  data-target="#search" data-form-target="#search">[% switch.id %]</a>
+                      <li><a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search">[% switch.id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="nas_ip_address"/>
                           <input type="hidden" name="searches.0.op" value="equal"/>
@@ -22,10 +22,10 @@
                       [% END %]</ul>
                     </li>
                   [% FOREACH switch_group IN switch_groups %]
-                    <a data-toggle="collapse" data-parent="#collapseSwitchGroup" href="#collapse_[% switch_group.id %]" class="collapsed">[% switch_group.id %]<i class="icon-chevron-up pull-right"></i></a>
+                    <a data-toggle="collapse" href="#collapse_[% switch_group.id %]" class="collapsed">[% switch_group.id %]<i class="icon-chevron-up pull-right"></i></a>
                     <li id="collapse_[% switch_group.id %]" class="collapse">
                       <ul>[% FOREACH member IN switch_group.members %]
-                        <li><a href="#" data-toggle="pf-search-form" data-parent="#collapse_[% switch_group.id %]"  data-target="#search" data-form-target="#search">[% member.id %]</a>
+                        <li><a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search">[% member.id %]</a>
                           <form>
                             <input type="hidden" name="searches.0.name" value="nas_ip_address"/>
                             <input type="hidden" name="searches.0.op" value="equal"/>
@@ -39,14 +39,14 @@
                 </ul>
               </li>
 
-              <li class="" id="accordion-Role">
-                <a data-toggle="collapse" data-parent="#accordion-Role" href="#collapseRole" class="collapsed">
+              <li id="accordion-Role">
+                <a data-toggle="collapse" href="#collapseRole" class="collapsed">
                   [% l('Roles') %]
                 <i class="icon-chevron-up pull-right"></i></a>
                 <ul id="collapseRole" class="collapse">
                   [% FOREACH role IN roles %]
                     <li>
-                      <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search" data-parent="#collapseRole">[% role.name %]</a>
+                      <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search">[% role.name %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="role"/>
                           <input type="hidden" name="searches.0.op" value="equal"/>
@@ -57,12 +57,12 @@
                 </ul>
               </li>
               <li class="" id="accordion-Status">
-                <a data-toggle="collapse" data-parent="#accordion-Status" href="#collapseStatus" class="collapsed">
+                <a data-toggle="collapse" href="#collapseStatus" class="collapsed">
                    [% l('Status') %]
                 <i class="icon-chevron-up pull-right"></i></a>
                 <ul id="collapseStatus" class="collapse">
                   <li>
-                    <a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search" data-parent="#collapseStatus">Register</a>
+                    <a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search">Register</a>
                       <form>
                         <input type="hidden" name="searches.0.name" value="node_status"/>
                         <input type="hidden" name="searches.0.op" value="equal"/>
@@ -70,7 +70,7 @@
                       </form>
                   </li>
                   <li>
-                    <a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search" data-parent="#collapseStatus">Unregister</a>
+                    <a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search">Unregister</a>
                       <form>
                         <input type="hidden" name="searches.0.name" value="node_status"/>
                         <input type="hidden" name="searches.0.op" value="equal"/>
@@ -78,7 +78,7 @@
                       </form>
                   </li>
                   <li>
-                    <a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search" data-parent="#collapseStatus">Accepted</a>
+                    <a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search">Accepted</a>
                       <form>
                         <input type="hidden" name="searches.0.name" value="auth_status"/>
                         <input type="hidden" name="searches.0.op" value="equal"/>
@@ -86,7 +86,7 @@
                       </form>
                   </li>
                   <li>
-                    <a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search" data-parent="#collapseStatus">Rejected</a>
+                    <a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search">Rejected</a>
                       <form>
                         <input type="hidden" name="searches.0.name" value="auth_status"/>
                         <input type="hidden" name="searches.0.op" value="equal"/>
@@ -96,13 +96,13 @@
                 </ul>
               </li>
               <li class="" id="accordion-Source">
-                <a data-toggle="collapse" data-parent="#accordion-Source" href="#collapseSource" class="collapsed">
+                <a data-toggle="collapse" href="#collapseSource" class="collapsed">
                   [% l('Sources') %]
                 <i class="icon-chevron-up pull-right"></i></a>
                 <ul id="collapseSource" class="collapse">
                   [% FOREACH source IN sources %]
                     <li>
-                      <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search" data-parent="#collapseSource">[% source.id %]</a>
+                      <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search">[% source.id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="source"/>
                           <input type="hidden" name="searches.0.op" value="equal"/>
@@ -113,13 +113,13 @@
                 </ul>
               </li>
               <li class="" id="accordion-Realm">
-                <a data-toggle="collapse" data-parent="#accordion-Realm" href="#collapseRealm" class="collapsed">
+                <a data-toggle="collapse" href="#collapseRealm" class="collapsed">
                   [% l('Realms') %]
                 <i class="icon-chevron-up pull-right"></i></a>
                 <ul id="collapseRealm" class="collapse">
                   [% FOREACH realm IN realms %]
                     <li>
-                      <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search" data-parent="#collapseRealm">[% realm.Id %]</a>
+                      <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search">[% realm.Id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="realm"/>
                           <input type="hidden" name="searches.0.op" value="equal"/>
@@ -130,13 +130,13 @@
                 </ul>
               </li>
               <li class="" id="accordion-Profile">
-                <a data-toggle="collapse" data-parent="#accordion-Profile" href="#collapseProfile" class="collapsed">
+                <a data-toggle="collapse" href="#collapseProfile" class="collapsed">
                   [% l('Profiles') %]
                 <i class="icon-chevron-up pull-right"></i></a>
                 <ul id="collapseProfile" class="collapse">
                   [% FOREACH profile IN profiles %]
                     <li>
-                      <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search" data-parent="#collapseProfile">[% profile.Id %]</a>
+                      <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search">[% profile.Id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="profile"/>
                           <input type="hidden" name="searches.0.op" value="equal"/>
@@ -147,13 +147,13 @@
                 </ul>
               </li>
               <li class="" id="accordion-Domain">
-                <a data-toggle="collapse" data-parent="#accordion-Domain" href="#collapseDomain" class="collapsed">
+                <a data-toggle="collapse" href="#collapseDomain" class="collapsed">
                   [% l('Domains') %]
                 <i class="icon-chevron-up pull-right"></i></a>
                 <ul id="collapseDomain" class="collapse">
                   [% FOREACH domain IN domains %]
                     <li>
-                      <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search" data-parent="#collapseDomain">[% domain.Id %]</a>
+                      <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search">[% domain.Id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="pf_domain"/>
                           <input type="hidden" name="searches.0.op" value="equal"/>
