largen fingerbank settings fields

--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -17,6 +17,7 @@
         'css/jqtree',
         'admin/config/switches',
         'admin/config/violations',
+        'admin/config/fingerbank-settings',
         ] -%]
 
 <style type="text/css">
