--- a/html/pfappserver/root/config/fingerbank/settings/index.tt
+++ b/html/pfappserver/root/config/fingerbank/settings/index.tt
@@ -4,7 +4,7 @@
 
 <br/>
 
-<form name="section" class="form-horizontal" action="[%c.uri_for(c.controller.action_for('index'))%]" method="post">
+<form name="section" id="fingerbankSettings" class="form-horizontal" action="[%c.uri_for(c.controller.action_for('index'))%]" method="post">
   [% FOREACH field IN form.fields %]
     [% form.field(field.name).render | none %]
   [% END %]
