--- a/html/pfappserver/root/admin/wrapper.tt
+++ b/html/pfappserver/root/admin/wrapper.tt
@@ -116,7 +116,7 @@
       </div>
     </div>
     [% IF readonly_mode %]
-    <div class="alert alert-block">
+    <div class="alert alert-error alert-block">
       <button class="close" data-dismiss="alert">&times;</button>
       <strong>[% l('Warning!') %]</strong>
       <span>[% l('The database is in readonly mode not all functionality is available') %]</span>
