--- a/html/pfappserver/root/admin/auditing_radius_log.tt
+++ b/html/pfappserver/root/admin/auditing_radius_log.tt
@@ -16,7 +16,7 @@
                       <li><a href="#" data-toggle="pf-search-form" data-parent="#collapseSwitchGroupDefault"  data-target="#search" data-form-target="#search">[% switch.id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="nas_ip_address"/>
-                          <input type="hidden" name="searches.0.op" value="is"/>
+                          <input type="hidden" name="searches.0.op" value="equal"/>
                           <input type="hidden" name="searches.0.value" value="[% switch.id %]"/>
                         </form>
                         </li>
@@ -29,7 +29,7 @@
                         <li><a href="#" data-toggle="pf-search-form" data-parent="#collapse_[% switch_group.id %]"  data-target="#search" data-form-target="#search">[% member.id %]</a>
                           <form>
                             <input type="hidden" name="searches.0.name" value="nas_ip_address"/>
-                            <input type="hidden" name="searches.0.op" value="is"/>
+                            <input type="hidden" name="searches.0.op" value="equal"/>
                             <input type="hidden" name="searches.0.value" value="[% member.id %]"/>
                           </form>
                         </li>
@@ -50,7 +50,7 @@
                       <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search" data-parent="#collapseRole">[% role.name %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="role"/>
-                          <input type="hidden" name="searches.0.op" value="is"/>
+                          <input type="hidden" name="searches.0.op" value="equal"/>
                           <input type="hidden" name="searches.0.value" value="[% role.name %]"/>
                         </form>
                     </li>
@@ -66,7 +66,7 @@
                     <a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search" data-parent="#collapseStatus">Register</a>
                       <form>
                         <input type="hidden" name="searches.0.name" value="node_status"/>
-                        <input type="hidden" name="searches.0.op" value="is"/>
+                        <input type="hidden" name="searches.0.op" value="equal"/>
                         <input type="hidden" name="searches.0.value" value="reg"/>
                       </form>
                   </li>
@@ -74,7 +74,7 @@
                     <a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search" data-parent="#collapseStatus">Unregister</a>
                       <form>
                         <input type="hidden" name="searches.0.name" value="node_status"/>
-                        <input type="hidden" name="searches.0.op" value="is"/>
+                        <input type="hidden" name="searches.0.op" value="equal"/>
                         <input type="hidden" name="searches.0.value" value="unreg"/>
                       </form>
                   </li>
@@ -82,7 +82,7 @@
                     <a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search" data-parent="#collapseStatus">Accepted</a>
                       <form>
                         <input type="hidden" name="searches.0.name" value="auth_status"/>
-                        <input type="hidden" name="searches.0.op" value="is"/>
+                        <input type="hidden" name="searches.0.op" value="equal"/>
                         <input type="hidden" name="searches.0.value" value="accept"/>
                       </form>
                   </li>
@@ -90,7 +90,7 @@
                     <a href="#" data-toggle="pf-search-form" data-target="#search" data-form-target="#search" data-parent="#collapseStatus">Rejected</a>
                       <form>
                         <input type="hidden" name="searches.0.name" value="auth_status"/>
-                        <input type="hidden" name="searches.0.op" value="is"/>
+                        <input type="hidden" name="searches.0.op" value="equal"/>
                         <input type="hidden" name="searches.0.value" value="reject"/>
                       </form>
                   </li>
@@ -106,7 +106,7 @@
                       <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search" data-parent="#collapseSource">[% source.id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="source"/>
-                          <input type="hidden" name="searches.0.op" value="is"/>
+                          <input type="hidden" name="searches.0.op" value="equal"/>
                           <input type="hidden" name="searches.0.value" value="[% source.id %]"/>
                         </form>
                     </li>
@@ -123,7 +123,7 @@
                       <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search" data-parent="#collapseRealm">[% realm.Id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="realm"/>
-                          <input type="hidden" name="searches.0.op" value="is"/>
+                          <input type="hidden" name="searches.0.op" value="equal"/>
                           <input type="hidden" name="searches.0.value" value="[% realm.Id %]"/>
                         </form>
                     </li>
@@ -140,7 +140,7 @@
                       <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search" data-parent="#collapseProfile">[% profile.Id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="profile"/>
-                          <input type="hidden" name="searches.0.op" value="is"/>
+                          <input type="hidden" name="searches.0.op" value="equal"/>
                           <input type="hidden" name="searches.0.value" value="[% profile.Id %]"/>
                         </form>
                     </li>
@@ -157,7 +157,7 @@
                       <a href="#" data-toggle="pf-search-form"  data-target="#search" data-form-target="#search" data-parent="#collapseDomain">[% domain.Id %]</a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="pf_domain"/>
-                          <input type="hidden" name="searches.0.op" value="is"/>
+                          <input type="hidden" name="searches.0.op" value="equal"/>
                           <input type="hidden" name="searches.0.value" value="[% domain.Id %]"/>
                         </form>
                     </li>
