(web admin) Fix date pickers of reports

--- a/html/pfappserver/root/admin/reports.tt
+++ b/html/pfappserver/root/admin/reports.tt
@@ -11,8 +11,7 @@
         'js/user',
         'admin/searches',
         'admin/nodes',
-        'admin/reports'
-        'admin/dynamicreport'
+        'js/reports'
         ]
      cssFiles = [
         'admin/reports'
