--- a/html/pfappserver/root/admin/reports-header.tt
+++ b/html/pfappserver/root/admin/reports-header.tt
@@ -1,12 +1,18 @@
 <div id="reports" class="navbar">
   <div class="navbar-inner">
-    <div class=" container">
+    <div class="container">
       <div class="nav-collapse collapse navbar-responsive-collapse">
 
-        <form class="navbar-search pull-left input-daterange" action="">
-          <input type="text" class="search-query input-small" name="start" value="[% c.session.reports.start | html %]" data-date-format="yyyy-mm-dd" />
+        <form class="navbar-search pull-left input-daterange"
+              data-date-format="yyyy-mm-dd">
+          <input type="text" class="search-query input-small" name="start"
+                 value="[% c.session.reports.start | html %]"
+                 data-date-format="yyyy-mm-dd" />
           <i class="icon-arrow-right"></i>
-          <input type="text" class="search-query input-small" name="end" value="[% c.session.reports.end | html %]" data-date-format="yyyy-mm-dd" date-datestart="[% c.session.reports.start | html %]" />
+          <input type="text" class="search-query input-small" name="end"
+                 value="[% c.session.reports.end | html %]"
+                 data-date-format="yyyy-mm-dd"
+                 data-date-start="[% c.session.reports.start | html %]" />
         </form>
       </div>
 
