(web admin) Improve dynamic reports

--- a/html/pfappserver/root/dynamicreport/search.tt
+++ b/html/pfappserver/root/dynamicreport/search.tt
@@ -1,5 +1,6 @@
-
-
+[% IF items.size == 0 %]
+<h3>[% l('No data found') %]</h3>
+[% ELSE %]
 <table id="dynamicReport" class="table table-condensed table-striped items">
   <thead>
     <tr>
@@ -12,9 +13,6 @@
     </tr>
   </thead>
   
-  [% IF items.size == 0 %]
-  <tr><td><h4>No data to display</h4></td></tr>
-  [% ELSE %]
     [% FOREACH item IN items %]
     <tr>
       [% FOREACH key IN item.keys %]
@@ -22,10 +20,10 @@
       [% END %]
     </tr>
     [% END %]
-  [% END %]
   <tfoot>
     <tr>
     <th colspan="[% items.0.keys.size %]">[% pagination(c.controller.action_for("search"), page_num, page_count,{direction => direction, by => by }, '#reportSearch') | none %]</th>
     </tr>
   </tfoot>
 </table>
+[% END %]
