--- a/html/pfappserver/root/dynamicreport/index.tt
+++ b/html/pfappserver/root/dynamicreport/index.tt
@@ -1,4 +1,4 @@
-<h2>[% IF report.description ; report.description ; ELSE ; report.id ; END %]</h2>
+<h2 class="card-title">[% IF report.description ; report.description ; ELSE ; report.id ; END %]</h2>
 
 [%- BLOCK search_options %]
   <select name="searches.0.name"[% ' disabled="disabled"' IF disabled %] class="span4">
@@ -18,16 +18,16 @@
   <div class="navbar-inner">
     <div class="container">
       <div class="nav-collapse collapse navbar-responsive-collapse">
-        <form id="search" name="search" class="navbar-search pull-left input-daterange datetimepicker" action="[%c.uri_for(c.controller.action_for('search'))%]" method="POST">
+        <form id="search" name="search" class="form-inline datetimepicker" action="[%c.uri_for(c.controller.action_for('search'))%]" method="POST">
           <input type="hidden" name="report_id" value="[% report.id %]">
-          <div class="input-daterange">
-            <input type="text" class="input-small datepicker" id="start_date"  name="start.date" value="[% start.date %]" data-date-format="yyyy-mm-dd" />
+          <div class="">
+            <input type="text" class="datepicker input-small" id="start_date"  name="start.date" value="[% start.date %]" data-date-format="yyyy-mm-dd" />
             <input type="text" name="start.time" id="start_time" value="[% start.time %]" class="timepicker-default input-small" placeholder="HH:MM"/>
             <i class="icon-arrow-right"></i>
-            <input type="text" class="input-small datepicker" id="end_date" name="end.date" value="[% end.date %]" data-date-format="yyyy-mm-dd" date-datestart="[% end_date %]" />
+            <input type="text" class="datepicker input-small" id="end_date" name="end.date" value="[% end.date %]" data-date-format="yyyy-mm-dd" date-datestart="[% end_date %]" />
             <input type="text" name="end.time" id="end_time" value="[% end.time %]" class="timepicker-default input-small" placeholder="HH:MM"/>
           </div>
-          <div style="width: 441px">
+          <div>
             <table id="searchConditions" class="table-dynamic">
                <thead>
                   <tr>
@@ -68,15 +68,16 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="padding-top: 1em">
-                    <div class="pull-left">
+                  <td>&nbsp;</td>
+                </tr>
+                <tr>
+                  <td>
                     [% INCLUDE per_page_select.tt %]
-                    </div>
                   </td>
                   <td>
-                    <div class="btn-group">
+                    <div class="btn-group pull-right">
                       <button class="btn btn-primary"><i class="icon-search icon-white"></i> [% l('Search') %]</button>
-                      <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                      <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
                       <ul class="dropdown-menu">
                            <li><a href="javascript:void(0)" data-export-url="[% c.uri_for(c.controller.action_for('search')) %]" data-export-form="#search" class="exportCSVBtn">[% l('Export to CSV') %]</a></li>
                       </ul>
@@ -92,4 +93,6 @@
   </div>
 </div>
 
-[% INCLUDE 'dynamicreport/search.tt' %]
+<div class="card-block">
+  [% INCLUDE 'dynamicreport/search.tt' %]
+</div>
