(web admin) Fix RADIUS Log Auditing search display

--- a/html/pfappserver/root/auditing/radiuslog/index.tt
+++ b/html/pfappserver/root/auditing/radiuslog/index.tt
@@ -118,5 +118,7 @@
       </div>
     </div>
   </div>
-[% INCLUDE auditing/radiuslog/search.tt %]
+  <div class="card-block">
+    [% INCLUDE auditing/radiuslog/search.tt %]
+  </div>
 </div>
