--- a/html/pfappserver/root/configuration/advanced_conf.tt
+++ b/html/pfappserver/root/configuration/advanced_conf.tt
@@ -1,2 +1,1 @@
-<h2>[% l('Advanced Configuration') %]</h2>
-<img src="img/instagram-icon.png" alt="Define a Policy">
+<h2><b>[% l('Advanced Configuration') %]</b></h2>
