--- a/html/pfappserver/root/configuration/portal_config.tt
+++ b/html/pfappserver/root/configuration/portal_config.tt
@@ -1,2 +1,1 @@
-<h2>[% l('Portal General Configuration') %]</h2>
-<img src="img/instagram-icon.png" alt="Define a Policy">
+<h2><b>[% l('Portal General Configuration') %]</b></h2>
