(web admin) Merge some JS libraries

--- a/html/pfappserver/root/admin/auditing.tt
+++ b/html/pfappserver/root/admin/auditing.tt
@@ -1,12 +1,6 @@
 [%  jsFiles = [
-        'app/raphael/raphael-min',
-        'app/raphael/g.raphael-min',
-        'app/raphael/g.bar-min',
-        'app/raphael/g.dot-min',
-        'app/raphael/g.line-min',
-        'app/raphael/g.pie-min',
+        'js/raphael.min',
         'app/graphs',
-        'app/uri',
         'admin/searches',
         'admin/config/items',
         'js/node',
