--- a/html/pfappserver/root/admin/users.tt
+++ b/html/pfappserver/root/admin/users.tt
@@ -1,12 +1,6 @@
 [%  jsFiles = [
-        'app/raphael/raphael-min',
-        'app/raphael/g.raphael-min',
-        'app/raphael/g.bar-min',
-        'app/raphael/g.dot-min',
-        'app/raphael/g.line-min',
-        'app/raphael/g.pie-min',
+        'js/raphael.min',
         'app/graphs',
-        'app/uri',
         'admin/users',
         'admin/searches',
         'js/node',
@@ -14,16 +8,6 @@
         ]
      cssFiles = [
         ] -%]
-
-<style type="text/css">
-.bootstrap-timepicker table {
-    width: 160px;
-}
-.table-dynamic .action {
-    width: 32px;
-}
-
-</style>
 
     [% INCLUDE admin/saved_search.inc method="" savedSearchController="SavedSearch::User"%] 
 
